third_party/rust/chromium_crates_io/vendor/lazy_static-v1/tests/compile_fail/static_is_sized.rs
#[macro_use]
extern crate lazy_static;

lazy_static! {
    pub static ref FOO: str = panic!();
}


fn main() { }
